cabal-version: 2.2
name:
  rose
version:
  0.2
synopsis:
  rose trees
-- description:
homepage:
  https://github.com/chessai/rose
bug-reports:
  https://github.com/chessai/rose/issues
license:
  BSD-3-Clause
author:
  chessai
maintainer:
  chessai1996@gmail.com
copyright:
  2020 chessai
category:
  Data
build-type:
  Simple
extra-doc-files:
    README.md
tested-with:
    GHC == 8.4.4
  , GHC == 8.6.5
  , GHC == 8.8.4
  , GHC == 8.10.2

library
  hs-source-dirs:
    src
  exposed-modules:
    Rose
  build-depends:
    , base >= 4.10.1 && < 5
    , comonad >= 5.0 && < 5.1
    , free >= 5.1 && < 5.2
    , indexed-traversable >= 0.1 && < 0.2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/rose.git
